# aegis

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
config/: config.yaml
src/: config.py  main.py
src/agent/: __init__.py  topic_agent.py
src/dashboard/: app.py  routes.py
src/dashboard/templates/: _stats_partial.html  base.html  content.html  index.html
src/db/: database.py  models.py  repository.py
src/discord_bot/: bot.py  publisher.py
src/llm/: client.py  prompts.py
src/pipeline/: categorizer.py  content.py  dedup.py  processor.py
src/scheduler/: jobs.py
src/sources/: base.py  web_search.py  youtube_channels.py  youtube_search.py
tests/: conftest.py  test_config.py  test_db.py  test_discord.py  test_llm.py  test_pipeline.py  test_sources.py
